-- fixing issue with too much spacing on the pledge modal

--- a/content/scss/partials/_modal.scss
+++ b/content/scss/partials/_modal.scss
@@ -91,8 +91,8 @@ ux-dialog {
             font-family: 'IBM Plex Sans', sans-serif;
             display: block;
             margin: 0 auto;
-            margin-top: 80px;
-            margin-bottom: 80px;
+            margin-top: 40px;
+            margin-bottom: 40px;
             width: 284px;
             height: 70px;
             border: solid 1px #ffffff;
